# QMdi

./: CMakeLists.txt  LICENSE  README.md  qmldir
ui/qml/: Mdi.qml  qmldir
